--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -190,12 +190,31 @@ body {
   width: 70%;
 }
 
+.section-content h2 {
+  text-align: center;
+}
+
 .cv-columns {
   width: 50%;
 }
 
 
+.about-wrapper .section-content,
+.contact-wrapper .section-content {
 
+  flex-direction: column;
+}
+
+
+
+.about-wrapper h3 {
+  font-weight: 500;
+  padding-bottom: 10px;
+}
+
+.contact-wrapper a {
+  color: black;
+}
 
 .open {
   display: flex;
