--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,7 +13,8 @@ h4,
 h5,
 h6,
 a,
-p {
+p,
+li {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-style: normal;
@@ -160,8 +161,7 @@ body {
 }
 
 /* ## Sections ## 
-*
-* Includes sections for:
+* Includes styles for all sections aswell as specific rules for the following different sections:
 * - CV
 * - Cases
 * - Projects
@@ -174,7 +174,6 @@ body {
   transition: all 0.3s;
 }
 
-/* CV */
 .section-content {
   background-color: rgba(191, 207, 207, 0.863);
   border-radius: 6px;
@@ -185,7 +184,10 @@ body {
   left: 50%;
   padding: 20px;
   position: absolute;
-  top: 10%;
+  overflow: auto;
+  scrollbar-color: rgba(0,0,0,0.2) transparent;
+  scrollbar-width: thin;
+  top: 5%;
   transform: translateX(-50%);
   width: 70%;
 }
@@ -194,10 +196,52 @@ body {
   text-align: center;
 }
 
+/*
+* CV-Section
+*/
 .cv-columns {
+
   width: 50%;
 }
 
+.cv-position {
+  margin-bottom: 20px;
+}
+
+.cv-title,
+.cv-duration {
+  font-weight: 400;
+}
+
+.cv-location {
+  font-weight: 500;
+}
+
+.cv-description {
+  margin-top: 5px;
+}
+
+.cv-skills {
+  display: flex;
+  flex-direction: row;
+  font-weight: 400;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 10px
+}
+
+.cv-skill {
+  flex-basis: calc(25% - 15px);
+  font-weight: 300;
+}
+
+
+
+
+
+/*
+  * 
+*/
 
 .about-wrapper .section-content,
 .contact-wrapper .section-content {
