case img shift done

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -332,8 +332,13 @@ body {
 }
 
 .case-img {
+  display: none;
   max-height: 100%;
   max-width: 100%;
+}
+
+.case-img.first {
+  display: block;
 }
 
 .text-col {
