--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -346,10 +346,13 @@ body {
   position: relative;
 }
 
+.text-col .info-header {
+  text-align: center;
+  padding: 20px;
+}
+
 .text-col .info-text {
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  margin-top: 20px;
 }
 
 
