--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,6 +35,13 @@ h4 {
   margin-top: 5px;
 }
 
+p {
+    font-size: 1rem;
+  @media(min-width: 1400px) {
+    font-size: 1.1rem;
+  }
+}
+
 a {
   color: #dedede;
   text-decoration: none;
@@ -59,7 +66,7 @@ body {
 */
 
 .image-wrapper {
-  height: 100vh;
+  height: 100svh;
   width: 100vw;
   position: relative;
   overflow: hidden
@@ -85,11 +92,15 @@ body {
   flex-direction: column;
   font-size: 2rem;
   gap: 20px;
-  height: 70vh;
-  justify-content: center;
   position: absolute;
   top: 0;
-  width: 200px;
+  width: 100vw;
+  
+  @media (min-width: 1400px) {
+    height: 70vh;
+    justify-content: center;
+    width: 200px;
+  }
 }
 
 .menu-container {
@@ -97,14 +108,19 @@ body {
 }
 
 .menu .menu-items {
-  align-content: center;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  gap: 40px;
-  height: 70vh;
+  gap: 20px;
+  height: 5vh;
   justify-content: space-evenly;
   
+  @media (min-width: 1400px) {
+    align-content: center;
+    flex-direction: column;
+    gap: 40px;
+    height: 70vh;
+  }
 }
 
 .menu .menu-items .menu-item {
@@ -114,10 +130,31 @@ body {
   z-index: 10;
 }
 
-.menu-item-text {
-  color: transparent;
-  transition: all 0.3s;
+.menu-item a {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  
+  @media (min-width: 1400px) {
+    flex-direction: row;
+    gap: 10px;
+  }
+}
 
+.menu-item span {
+  align-self: center;
+}
+
+.menu-item-text {
+  color: white;
+  font-size:0.8rem;
+  transition: all 0.3s;
+  
+  @media (min-width: 1400px) {
+    color: transparent;
+    font-size: 2rem;
+  }
 }
 
 .menu-item:hover {
@@ -149,10 +186,14 @@ body {
   left: 50%;
   max-width: 1200px;
   position: absolute;
-  top: 70vh;
+  top: 42vh;
   transform: translateX(-50%);
   text-shadow: 0 0 15px #000000;
   width: 80vw;
+
+  @media (min-width: 1400px) {
+    top: 70vh;
+  }
 }
 
 .text-container h1 {
@@ -164,10 +205,8 @@ body {
 
 
 .text-container p {
-  font-size: 1.1rem;
   letter-spacing: 2px;
   line-height: 1.5;
-
   padding-top: 10px;
   text-align: center;
 }
@@ -211,7 +250,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  height: 80vh;
+  height: 85vh;
   left: 50%;
   padding: 20px;
   position: absolute;
@@ -220,24 +259,39 @@ body {
   scrollbar-width: thin;
   top: 5%;
   transform: translateX(-50%);
-  width: 70%;
+  width: 80%;
   z-index: 10;
+
+  @media (min-width: 1400px) {
+    width: 70%;
+  }
 }
 
 .section-content h2 {
   text-align: center;
 }
 
+.open {
+  display: flex;
+}
+
 /*
 * CV-Section
 */
 .cv-wrapper .section-content {
-  flex-direction: row;
+  flex-direction: column;
+
+  @media (min-width: 1400px) {
+    flex-direction: row;
+  }
 }
 
 .cv-columns {
+  width: 100%;
 
-  width: 50%;
+  @media(min-width: 1400px) {
+    width: 50%;
+  }
 }
 
 .cv-position {
@@ -254,6 +308,7 @@ body {
 }
 
 .cv-description {
+  font-weight: 400;
   margin-top: 5px;
 }
 
@@ -267,12 +322,13 @@ body {
 }
 
 .cv-skill {
+  flex-basis: calc(33% - 15px);
+  font-weight: 400;
+
+  @media (min-width: 800px) {
   flex-basis: calc(25% - 15px);
-  font-weight: 300;
+  }
 }
-
-
-
 
 
 /*
@@ -288,58 +344,78 @@ body {
   height: 480px;
   position: relative;
   margin-bottom: 20px;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .case-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
+
+  @media(min-width: 1400px) {
+    flex-direction: row;
+  }
 }
 
 .img-col {
-  height: 455px;
+  max-height: 455px;
   position: relative;
-  width: 65%;
+  max-width: 100%;
   object-fit: contain;
+
+  @media (min-width: 1400px) {
+    max-width: 65%;
+  }
 }
 
 .img-col span {
+  align-content: center;
+  background-color:rgb(187, 199, 199);
+  border-radius: 50%;
+  cursor: pointer;
+  height: 30px;
   position: absolute;
+  text-align: center;
   top: 50%;
   transform: translateY(-50%);
-  height: 30px;
   width: 30px;
-  background-color:rgba(191, 207, 207, 0.904);
-  border-radius: 50%;
-  text-align: center;
-  align-content: center;
-  cursor: pointer;
 }
 
 .img-col span.left {
   display: none;
+  left: -15px;
+
+  @media(min-width: 1400px) {
   left: 5px;
+  }
 }
 
 .img-col span.right {
-  right: 5px;
+  right: -15px;
+
+  @media(min-width: 1400px) {
+    right: 5px;
+    }
 }
-
-
 
 .shown-img {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: 200px;
   overflow: hidden;
   justify-content: center;
+  object-fit: contain;
+
+  @media(min-width: 1400px) {
+    height: 100%;
+  }
 }
 
 .case-img {
   display: none;
   max-height: 100%;
   max-width: 100%;
+  object-fit: contain;
 }
 
 .case-img.first {
@@ -347,8 +423,12 @@ body {
 }
 
 .text-col {
-  width: 33%;
+  width: 100%;
   position: relative;
+
+  @media(min-width: 1400px) {
+    width: 33%;
+  }
 }
 
 .text-col .info-header {
@@ -366,8 +446,23 @@ body {
   margin-top: 20px;
 }
 
+/*
+ * Project
+*/
 
+.byO-container {
+  margin-bottom: 20px;
+}
 
+.byO-project-title {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.byO-img{
+  max-width: 100%;
+  object-fit: contain;
+}
 
 /*
  * About  
@@ -380,15 +475,25 @@ body {
 
 .about-wrapper .section-content {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  
+  @media(min-width: 1400px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+  }
 }
 
 .about-column {
-height: 100%;
-object-fit: contain;
-width: 45%;
-justify-content: space-evenly;
+  object-fit: contain;
+  width: 100%;
+  justify-content: space-evenly;
+  
+  @media(min-width: 1400px) {
+    height: 100%;
+    width: calc(50% - 20px);
+  }
 }
 
 .about-img {
@@ -397,16 +502,26 @@ justify-content: space-evenly;
   object-fit: contain;
 }
 
+.about-img-text {
+  font-size: 0.8rem;
+  font-weight: 400;
+}
+
 /*
  * Contact
 */
 
-.contact-wrapper a {
-  color: black;
+.contact-wrapper .section-content {
+  height: fit-content;  
 }
 
-.open {
-  display: flex;
+.contact-wrapper a {
+  color: black;
+  text-align: center;
+
+  @media(min-width: 1400px) {
+    text-align: left;
+  }
 }
 
 
