--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -77,6 +77,7 @@ body {
   left: 50%;
   position: absolute;
   transform: translateX(-50%);
+  min-width: 100%;
 }
 
 .image-overlay {
@@ -87,7 +88,6 @@ body {
 }
 
 .menu {
-  /*background-color: rgba(99, 104, 104, 0.4);*/
   display: flex;
   flex-direction: column;
   font-size: 2rem;
@@ -365,12 +365,13 @@ body {
 
   @media (min-width: 1400px) {
     max-width: 65%;
+    width: 65%;
   }
 }
 
 .img-col span {
   align-content: center;
-  background-color:rgb(187, 199, 199);
+  background-color:rgb(102, 109, 109);
   border-radius: 50%;
   cursor: pointer;
   height: 30px;
@@ -562,6 +563,27 @@ footer {
   gap: 20px;
   margin-bottom: 15px;
   position: relative;
+}
+
+.byO-background-swapper p {
+  font-size: 1rem;
+  
+  @media(min-width: 1400px) {
+    display: none;
+  }
+}
+
+.byO-background-swapper-thumbnail {
+  border: solid 1px white;
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+  transition: all 0.3s;
+
+  &:hover {
+    height: 50px;
+    width: 50px;
+  }
 }
 
 .cc {
