--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -107,6 +107,12 @@ body {
   align-items: center;
 }
 
+.menu-container p,
+ .menu-container a {
+  text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 2px 2px #000, 0 -2px 2px #000,
+  1px 1px 2px #000, -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000;
+  }
+
 .menu .menu-items {
   display: flex;
   flex-direction: row;
@@ -152,14 +158,17 @@ body {
   transition: all 0.3s;
   
   @media (min-width: 1400px) {
-    color: transparent;
+    opacity: 0;
     font-size: 2rem;
   }
 }
 
 .menu-item:hover {
+  >a span,
   .menu-item-text {
-    color: white;
+    opacity: 1;
+    text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 2px 2px #000, 0 -2px 2px #000,
+    1px 1px 2px #000, -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000;
   }
 }
 
@@ -178,23 +187,26 @@ body {
 */
 
 .text-container {
-  /*background-color: rgba(99, 104, 104, 0.4);*/
+  color: white;
   display: flex;
   flex-direction: column;
-  color: white;
   height: 25vh;
   left: 50%;
   max-width: 1200px;
   position: absolute;
+  text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 2px 2px #000, 0 -2px 2px #000,
+  1px 1px 2px #000, -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000;
   top: 42vh;
   transform: translateX(-50%);
-  text-shadow: 0 0 15px #000000;
+  transition: all 0.3s;
   width: 80vw;
 
   @media (min-width: 1400px) {
     top: 70vh;
   }
 }
+
+
 
 .text-container h1 {
   font-size: 3rem;
@@ -217,7 +229,7 @@ body {
 
 #overlay {
   display: none;
-  height: 100vh;
+  height: 100svh;
   left: 0;
   position: absolute;
   top: 0;
@@ -441,6 +453,7 @@ body {
   color: black;
   font-weight: 400;
   text-decoration: underline;
+  text-shadow: unset;
 }
 
 .text-col .info-text {
@@ -458,6 +471,13 @@ body {
 .byO-project-title {
   margin-bottom: 10px;
   text-align: center;
+}
+
+.byO-project-title a {
+  color: black;
+  font-weight: 400;
+  text-decoration: underline;
+  text-shadow: unset;
 }
 
 .byO-img-container {
@@ -546,8 +566,9 @@ body {
 */
 
 footer {
-  position: absolute;
   bottom: 0;
+  height: 40px;
+  position: absolute;
 }
 
 .footer-container {
@@ -560,17 +581,31 @@ footer {
   padding: 0 20px
 }
 
+.footer-container p {
+  text-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 2px 2px #000, 0 -2px 2px #000,
+  1px 1px 2px #000, -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000;
+}
+
 .footer-area {
   color: white;
   display: flex;
   flex-direction: row;
   gap: 20px;
-  margin-bottom: 15px;
   position: relative;
+  justify-content: center;
+}
+
+.byO-background-swapper {
+  align-self: center;
+  display: flex;
+  height: 100%;
+
 }
 
 .byO-background-swapper p {
+  
   font-size: 1rem;
+
   
   @media(min-width: 1400px) {
     display: none;
@@ -578,18 +613,32 @@ footer {
 }
 
 .byO-background-swapper-thumbnail {
+  align-self: end;
   border: solid 1px white;
+  bottom: 5px;
+  box-shadow: 2px 0 2px #000, -2px 0 2px #000, 0 2px 2px #000, 0 -2px 2px #000,
+  1px 1px 2px #000, -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000;
   cursor: pointer;
   height: 30px;
-  width: 30px;
+  position: relative;
   transition: all 0.3s;
+  width: 30px;
 
-  &:hover {
-    height: 50px;
-    width: 50px;
+  @media(min-width: 1400px) {
+    &:hover {
+      height: 50px;
+      width: 30px;
+      object-fit: cover;
+    }
   }
 }
 
+.byO-background-swapper-thumbnail:not(:first-of-type) {
+  margin-left: 10px;
+}
+
 .cc {
+  margin-bottom: 12px;
   font-size: 0.8rem;
+  text-align: center;
 }
